k8s/main/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-backend
  namespace: boilerplate
  labels:
    app: main-backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: main-backend
