k8s/main/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-frontend
  namespace: boilerplate
  labels:
    app: main-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: main-frontend
