k8s/main/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-backend
  namespace: boilerplate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - PLACEHOLDER
      secretName: main-backend-tls
  rules:
    - host: PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-backend
                port:
                  number: 8000
