k8s/main/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-frontend
  namespace: boilerplate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - PLACEHOLDER
      secretName: main-frontend-tls
  rules:
    - host: PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-frontend
                port:
                  number: 80
